--- a/PegasusDataStore/grails-app/i18n/messages.properties
+++ b/PegasusDataStore/grails-app/i18n/messages.properties
@@ -1,3 +1,7 @@
+
+
+
+
 default.doesnt.match.message=Property [{0}] of class [{1}] with value [{2}] does not match the required pattern [{3}]
 default.invalid.url.message=Property [{0}] of class [{1}] with value [{2}] is not a valid URL
 default.invalid.creditCard.message=Property [{0}] of class [{1}] with value [{2}] is not a valid credit card number
@@ -14,6 +18,10 @@ default.blank.message=Property [{0}] of class [{1}] cannot be blank
 default.not.equal.message=Property [{0}] of class [{1}] with value [{2}] cannot equal [{3}]
 default.null.message=Property [{0}] of class [{1}] cannot be null
 default.not.unique.message=Property [{0}] of class [{1}] with value [{2}] must be unique
+
+raceRequestDTO.time.matches.error=O horário deve estar no formato HH:mm.
+raceRequestDTO.date.matches.error=A data deve estar no formato yyyy-MM-dd.
+raceRequestDTO.horseJockeys.minSize.error=É necessário pelo menos um jockey na corrida.
 
 default.paginate.prev=Previous
 default.paginate.next=Next
