feat: add horses and jockeys tables

--- a/PegasusDataStore/grails-app/i18n/messages.properties
+++ b/PegasusDataStore/grails-app/i18n/messages.properties
@@ -19,9 +19,9 @@ default.not.equal.message=Property [{0}] of class [{1}] with value [{2}] cannot 
 default.null.message=Property [{0}] of class [{1}] cannot be null
 default.not.unique.message=Property [{0}] of class [{1}] with value [{2}] must be unique
 
-raceRequestDTO.time.matches.error=O horário deve estar no formato HH:mm.
-raceRequestDTO.date.matches.error=A data deve estar no formato yyyy-MM-dd.
-raceRequestDTO.horseJockeys.minSize.error=É necessário pelo menos um jockey na corrida.
+raceRequestDTO.time.matches.error=O horario deve estar no formato HH:mm.
+raceRequestDTO.date.matches.error=A data deve estar no formato dd/MM/YYYY.
+raceRequestDTO.horseJockeys.minSize.error=Adicione pelo menos um jockey e um cavalo na corrida.
 
 default.paginate.prev=Previous
 default.paginate.next=Next
